--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.19.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-animated-burgers": "^1.2.7",
     "react-dom": "^16.9.0",
+    "react-favicon": "^0.0.17",
+    "react-images": "^1.0.0",
     "react-inlinesvg": "^1.1.6",
+    "react-modal-image": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
