--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-animated-burgers": "^1.2.7",
     "react-dom": "^16.9.0",
-    "react-favicon": "^0.0.17",
     "react-images": "^1.0.0",
     "react-inlinesvg": "^1.1.6",
     "react-modal-image": "^2.4.0",
