--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nav-example",
+  "name": "soul-ponies",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -26,6 +27,7 @@
     "react": "^16.9.0",
     "react-animated-burgers": "^1.2.7",
     "react-dom": "^16.9.0",
+    "react-favicon": "^0.0.17",
     "react-images": "^1.0.0",
     "react-inlinesvg": "^1.1.6",
     "react-modal-image": "^2.4.0",
